# r1-distill

./: .env.example  .gitignore  Makefile  README.md  install_torch.sh  pyproject.toml
configs/: curation.yaml  ds_zero2.json  ds_zero3.json  generation.yaml  generation_smoke.yaml  pcmb_source.yaml
data/processed/: trace_stats.json
data/raw/: pcmb_500.jsonl  pcmb_smoke.jsonl
data/traces/: pcmb_traces.jsonl  pcmb_traces_filtered.jsonl  pcmb_traces_smoke.jsonl
docker/: Dockerfile
notebooks/: 01_explore_pcmb.ipynb  02_monitor_generation.ipynb  03_analyze_traces.ipynb  04_diagnose_failures.ipynb  05_verify_sft_data.ipynb
scripts/: nccl_check.py  refilter_for_8k.py  runpod_setup.sh  train_1_5b.sh  train_7b.sh
src/: config.py  utils.py
src/curation/: build_dataset.py  source_pcmb.py
src/generation/: client.py  generate_traces.py  parser.py  prompts.py  schema.py
tests/: test_smoke.py
wandb/: latest-run
wandb/run-20260518_112556-rc211wev/: run-rc211wev.wandb
wandb/run-20260518_112556-rc211wev/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
